flask-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: flask
  name: flask
spec:
  containers:
  - image: flaskapp:1.0
    name: flask
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
