flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
spec:
  selector:
    app: flask
  ports:
    - port: 8080
      targetPort: 5000
